complete navbar for larger screens

--- a/index.html
+++ b/index.html
@@ -16,7 +16,30 @@
 <body>
 
     <header>
+        <nav class="navbar navbar-expand navbar-light bg-light" id="navbar-lg">
+            <a class="navbar-brand"><i class="fa fa-map-marker" aria-hidden="true"></i>
+                patashule</a>
+            <div class="mx-auto"></div>
+            </div>
+            <ul class="navbar-nav mr-sm-2">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">SCHOOLS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">BLOG</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">MORE</a>
+                </li>
+            </ul>
+        </nav>
 
+        <nav>
+            
+        </nav>
     </header>
 
     <main>
