--- a/index.html
+++ b/index.html
@@ -16,30 +16,54 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand navbar-light bg-light" id="navbar-lg">
-            <a class="navbar-brand"><i class="fa fa-map-marker" aria-hidden="true"></i>
-                patashule</a>
-            <div class="mx-auto"></div>
+
+        <nav class="d-block d-md-none">
+            <div class="d-flex justify-content-center">
+                <a class="navbar-brand mx-0">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        patashule
+                </a>
             </div>
+            <div class="navbar navbar-expand navbar-light justify-content-center">
+                <ul class="navbar-nav">
+                    <li class="nav-item mx-2">
+                      <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#"><i class="fa fa-user-o" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#"><i class="fa fa-rss" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#"><i class="fa fa-list" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <nav class="navbar navbar-expand navbar-light d-none d-md-flex" id="navbar-lg">
+            <a class="navbar-brand">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                patashule
+            </a>
+            <div class="mx-auto"></div>
             <ul class="navbar-nav mr-sm-2">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">SCHOOLS</a>
+                <li class="nav-item mx-2">
+                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i> HOMES</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT</a>
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="#"><i class="fa fa-user-o" aria-hidden="true"></i> ABOUT</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">BLOG</a>
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="#"><i class="fa fa-rss" aria-hidden="true"></i> BLOG</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">MORE</a>
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="#"><i class="fa fa-list" aria-hidden="true"></i> MORE</a>
                 </li>
             </ul>
         </nav>
-
-        <nav>
-            
-        </nav>
+       
     </header>
 
     <main>
