complete header of website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </nav>
 
-        <nav class="navbar navbar-expand navbar-light d-none d-md-flex" id="navbar-lg">
+        <nav class="navbar navbar-expand navbar-light d-none d-md-flex mx-5">
             <a class="navbar-brand">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 patashule
