--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <header>
 
-        <nav class="d-block d-md-none">
+        <nav class="d-block d-md-none pgnav-bg">
             <div class="d-flex justify-content-center">
                 <a class="navbar-brand mx-0">
                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                         patashule
                 </a>
             </div>
-            <div class="navbar navbar-expand navbar-light justify-content-center">
+            <div class="navbar navbar-expand navbar-light justify-content-center pgnav-bg">
                 <ul class="navbar-nav">
                     <li class="nav-item mx-2">
                       <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
@@ -68,6 +68,10 @@
 
     <main>
 
+        <div class="page-jumbotron">
+
+        </div>
+        
     </main>
     
     <footer>
