add how it works steps

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         
         <div class="page-jumbotron">
             <div class="jumbotron-items-header">
-                <h6 class="page-slogan">PATA SHULE... YOUR GATEWAY TO AFFORDABLE HOUSES IN GHANA</h6>
+                <h5 class="page-slogan">PATA SHULE... YOUR GATEWAY TO AFFORDABLE HOUSES IN GHANA</h5>
 
                 <div class="form-holder d-sm-block d-md-none">
                     <button type="button" class="btn btn-primary search-button-mobile">Submit</button>
@@ -82,7 +82,7 @@
                             </div>
                         </form>
                     </div>
-                    <button class="btn btn-default button-howit-work">How it works</button>
+                    <button class="btn btn-default button-howit-work px-0">How it works</button>
                 </div>
 
                 <div class="form-holder d-none d-md-block">
@@ -103,11 +103,11 @@
 
     <main>
 
-        <section>
+        <section class="row">
             
-            <h5 class="main-header">PATA SHULE WORKS IN FOUR SIMPLE STEPS</h5>
+            <h5 class="main-header col-sm-12">PATA SHULE WORKS IN FOUR SIMPLE STEPS</h5>
 
-            <div class="card text-center col-sm-12 border-0">
+            <div class="card text-center col-sm-12 col-md-6 border-0">
                 <div class="card-body">
                     <div><i class="fa fa-list-alt fa-3x" aria-hidden="true"></i></div>
                     <h5 class="card-title">1 - SEARCH:</h5>
@@ -115,26 +115,26 @@
                 </div>
             </div>
 
-            <div class="card text-center col-sm-12 border-0">
+            <div class="card text-center col-sm-12 col-md-6 border-0">
                 <div class="card-body">
-                    <div><i class="fa fa-list-alt fa-3x" aria-hidden="true"></i></div>
-                    <h5 class="card-title">1 - SEARCH:</h5>
+                    <div><i class="fa fa-map fa-3x" aria-hidden="true"></i></div>
+                    <h5 class="card-title">2 - LOCATE:</h5>
                     <p class="card-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
             </div>
 
-            <div class="card text-center col-sm-12 border-0">
+            <div class="card text-center col-sm-12 col-md-6 border-0">
                 <div class="card-body">
-                    <div><i class="fa fa-list-alt fa-3x" aria-hidden="true"></i></div>
-                    <h5 class="card-title">1 - SEARCH:</h5>
+                    <div><i class="fa fa-files-o fa-3x" aria-hidden="true"></i></div>
+                    <h5 class="card-title">3 - APPLY:</h5>
                     <p class="card-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
             </div>
 
-            <div class="card text-center col-sm-12 border-0">
+            <div class="card text-center col-sm-12 col-md-6 border-0">
                 <div class="card-body">
-                    <div><i class="fa fa-list-alt fa-3x" aria-hidden="true"></i></div>
-                    <h5 class="card-title">1 - SEARCH:</h5>
+                    <div><i class="fa fa-bed fa-3x" aria-hidden="true"></i></div>
+                    <h5 class="card-title">4 - RELAX:</h5>
                     <p class="card-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
             </div>
