issue with button outline resolved

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h5 class="page-slogan">PATA SHULE... YOUR GATEWAY TO AFFORDABLE HOUSES IN GHANA</h5>
 
                 <div class="form-holder d-sm-block d-md-none">
-                    <button type="button" class="btn btn-primary search-button-mobile">Submit</button>
+                    <button type="button" class="btn btn-default search-button-mobile">Submit</button>
                     <div class="search-form">
                         <form>
                             <div class="form-group">
