--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
         
         <div class="page-jumbotron">
             <div class="jumbotron-items-header">
-                <h5 class="page-slogan">PATA SHULE... YOUR GATEWAY TO AFFORDABLE HOUSES IN GHANA</h5>
+                <h5 class="page-slogan text-uppercase">PATA SHULE... YOUR GATEWAY TO AFFORDABLE HOUSES IN GHANA</h5>
 
                 <div class="form-holder d-sm-block d-md-none">
-                    <button type="button" class="btn btn-default search-button-mobile">Submit</button>
+                    <button type="button" class="btn btn-default search-button-mobile text-uppercase">SEARCH</button>
                     <div class="search-form">
                         <form>
                             <div class="form-group">
-                                <label for="exampleInputEmail1">Email address</label>
+                                <label for="exampleInputEmail1" class="font-weight-bold text-uppercase">SEARCH BY KEY WORD</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                             </div>
                         </form>
                     </div>
-                    <button class="btn btn-default button-how-it-work px-0">How it works</button>
+                    <button class="btn btn-default button-how-it-work px-0 font-weight-bold">How it works</button>
                 </div>
 
                 <div class="form-holder d-none d-md-block">
@@ -110,7 +110,7 @@
             <div class="card text-center col-sm-12 col-md-6 border-0">
                 <div class="card-body">
 
-                    <div><i class="fa fa-list-alt fa-3x" aria-hidden="true"></i></div>
+                    <div class="my-2"><i class="fa fa-list-alt fa-3x" aria-hidden="true"></i></div>
                     <h5 class="card-title">1 - SEARCH:</h5>
                     <p class="card-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
@@ -118,7 +118,8 @@
 
             <div class="card text-center col-sm-12 col-md-6 border-0">
                 <div class="card-body">
-                    <div><i class="fa fa-map fa-3x" aria-hidden="true"></i></div>
+
+                    <div class="my-2"><i class="fa fa-map fa-3x" aria-hidden="true"></i></div>
                     <h5 class="card-title">2 - LOCATE:</h5>
                     <p class="card-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
@@ -126,7 +127,8 @@
 
             <div class="card text-center col-sm-12 col-md-6 border-0">
                 <div class="card-body">
-                    <div><i class="fa fa-files-o fa-3x" aria-hidden="true"></i></div>
+
+                    <div class="my-2"><i class="fa fa-files-o fa-3x" aria-hidden="true"></i></div>
                     <h5 class="card-title">3 - APPLY:</h5>
                     <p class="card-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
@@ -134,7 +136,8 @@
 
             <div class="card text-center col-sm-12 col-md-6 border-0">
                 <div class="card-body">
-                    <div><i class="fa fa-bed fa-3x" aria-hidden="true"></i></div>
+
+                    <div class="my-2"><i class="fa fa-bed fa-3x" aria-hidden="true"></i></div>
                     <h5 class="card-title">4 - RELAX:</h5>
                     <p class="card-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
@@ -144,23 +147,22 @@
 
         <section class="row advertisement-section">
 
-            <div class="col-sm-12 col-md-9 advertisement bg-color-yellow">
-                <h6 class="find-home-header px-4 font-weight-bold">Over 10,000 people found their dream homes with us</h6>
-                <p class="find-home-desc px-4">Find your home by using our filtered search engine</p>
+            <div class="col-sm-12 col-md-9 advertisement bg-color-yellow pt-4">
+                <h5 class="find-home-header font-weight-bold mt-40">Over 10,000 people found their dream homes with us</h5>
+                <p class="my-3">Find your home by using our filtered search engine</p>
                 <button class="btn btn-default find-home-button btn-ads-yellow">Find a home</button>
             </div>
 
             <div class="col-sm-12 col-md-9 advertisement bg-color-gray">
-                <h6 class="find-home-header px-4 font-weight-bold">No need to use agents to find your dream home</h6>
-                <p class="find-home-desc px-4">Just press or click on the search and You're all set</p>
+                <h5 class="find-home-header font-weight-bold">No need to use agents to find your dream home</h5>
+                <p class="my-3">Just press or click on the search and You're all set</p>
                 <button class="btn btn-default find-home-button btn-ads-gray">Find a home near you</button>
             </div>
 
             <div class="col-sm-12 col-md-9 advertisement bg-color-blue">
-                <h6 class="find-home-header px-4 font-weight-bold">Anytime, Anywhere, Any way!</h6>
-                <p class="find-home-desc px-4">Very convenient platform that cut across any device including 
+                <h5 class="find-home-header font-weight-bold">Anytime, Anywhere, Any way!</h5>
+                <p class="my-3">Very convenient platform that cut across any device including 
                     our mobile ready web app and our mobile app coming soon to your app store</p>
-                <div class="mb-5"></div>
             </div>
             
         </section>
