add pointer cursor to search button

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h3 class="page-slogan-md text-uppercase d-none d-sm-none d-md-block">PATA SHULE... YOUR GATEWAY TO
                     AFFORDABLE HOUSES IN GHANA</h3>
                 <div class="form-holder d-block d-sm-none d-md-none">
-                    <button type="button" class="btn btn-default search-button-mobile text-uppercase">SEARCH</button>
+                    <button type="button" class="btn btn-default search-button-mobile text-uppercase cursor-pointer">SEARCH</button>
                     <div class="search-form">
                         <form>
                             <div class="form-group">
@@ -92,8 +92,8 @@
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
                                     aria-describedby="basic-addon2">
-                                <div class="input-group-append">
-                                    <span class="input-group-text bg-color-blue" id="basic-addon2">SEARCH</span>
+                                <div class="input-group-append cursor-pointer">
+                                    <span class="input-group-text bg-color-blue " id="basic-addon2">SEARCH</span>
                                 </div>
                             </div>
                         </form>
@@ -104,8 +104,8 @@
                     <div class="input-group mb-3 searchField-md">
                         <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
                             aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                            <span class="input-group-text bg-color-yellow" id="basic-addon2">SEARCH</span>
+                        <div class="input-group-append cursor-pointer">
+                            <span class="input-group-text bg-color-yellow" id="basic-addon2 ">SEARCH</span>
                         </div>
                     </div>
                     <div class="search-form-md">
