search form made responsive for small screens

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
                 <h5 class="text-center mb-3">MENU</h5>
 
-                <div class="col-12 py-3 mb-0 text-center border-gray-top">
+                <div class="col-12 py-3 mb-0 text-center border-bottom-gray border-gray-top">
                     <ul class="px-0 my-0 footer-list d-flex justify-content-around list-unstyled">
                         <li>HOME</li>
                         <li>SEARCH</li>
@@ -353,8 +353,8 @@
                     </ul>
                 </div>
 
-                <div class="col-7 my-0">
-                    <p class="copyright float-right mr-4"><i class="fa fa-copyright text-uppercase" aria-hidden="true"></i> 2020
+                <div class="col-7">
+                    <p class="copyright float-right my-auto mr-4"><i class="fa fa-copyright text-uppercase" aria-hidden="true"></i> 2020
                         PATASHULE ALL RIGHTS RESERVED <i class="fa fa-university" aria-hidden="true"></i>
                         <strong> ICONIUM DIGITAL</strong> LOVE AND AWESOMENESS
                     </p>
