--- a/results.html
+++ b/results.html
@@ -104,7 +104,7 @@
                 </form>
             </div>
 
-            <div class="container-fluid d-none d-md-flex d-lg-none">
+            <div class="container-fluid d-none d-md-block d-lg-none">
                 <form>
                     <div class="form-row">
                         <div class="col-md-3 mb-3">
@@ -135,6 +135,45 @@
                             <div class="position-absolute searchBtns">
                                 <button type="submit" class="btn btn-primary"> Search</button>
                                 <button type="submit" class="btn btn-warning"> Clear filter</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="container d-block d-md-none d-lg-none">
+                <form>
+                    <div class="form-row">
+                        <div class="col-md-12 mb-3">
+                            <label for="validationDefault02">City/Town <span class="text-danger">*</span></label>
+                            <select class="form-control">
+                                <option>Select</option>
+                            </select>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <label for="validationDefault01">Neighbourhood <span class="text-danger">*</span></label>
+                            <select class="form-control">
+                                <option>Select</option>
+                            </select>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <label for="validationDefaultUsername">Apartment Type <span class="text-danger">*</span></label>
+                            <select class="form-control">
+                                <option>Select</option>
+                            </select>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <label for="validationDefault02">Pricing <span class="text-danger">*</span></label>
+                            <select class="form-control">
+                                <option>Select</option>
+                            </select>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                            <div class="">
+                                <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> 
+                                     Search</button>
+                                <button type="submit" class="btn btn-warning"><i class="fa fa-eraser" aria-hidden="true"></i>
+                                     Clear filter</button>
                             </div>
                         </div>
                     </div>
@@ -259,7 +298,7 @@
 
                 <h5 class="text-center mb-3">MENU</h5>
 
-                <div class="col-12 py-3 mb-0 text-center border-gray-top">
+                <div class="col-12 py-3 mb-0 text-center border-bottom-gray border-gray-top">
                     <ul class="px-0 my-0 footer-list d-flex justify-content-around list-unstyled">
                         <li>HOME</li>
                         <li>SEARCH</li>
@@ -377,16 +416,14 @@
                     </ul>
                 </div>
 
-                <div class="col-7 my-0">
-                    <p class="copyright float-right mr-4"><i class="fa fa-copyright text-uppercase"
-                            aria-hidden="true"></i> 2020
+                <div class="col-7">
+                    <p class="copyright float-right my-auto mr-4"><i class="fa fa-copyright text-uppercase" aria-hidden="true"></i> 2020
                         PATASHULE ALL RIGHTS RESERVED <i class="fa fa-university" aria-hidden="true"></i>
                         <strong> ICONIUM DIGITAL</strong> LOVE AND AWESOMENESS
                     </p>
                 </div>
             </div>
         </div>
-
 
     </footer>
 
