--- a/results.html
+++ b/results.html
@@ -66,7 +66,9 @@
 
         <div class="my-5 py-5 bg-search-form">
             <div class="container d-none d-lg-block">
-                <form>
+                <h4 class="page-form-title">Filter by name of city, neighbourhood, type of apartment and price range:</h4>
+
+                <form class="mt-4">
                     <div class="form-row">
                         <div class="col-md-3 mb-3">
                             <label for="validationDefault02">City/Town <span class="text-danger">*</span></label>
@@ -105,7 +107,10 @@
             </div>
 
             <div class="container-fluid d-none d-md-block d-lg-none">
-                <form>
+
+                <h4 class="page-form-title">Filter by name of city, neighbourhood, type of apartment and price range:</h4>
+
+                <form class="mt-4">
                     <div class="form-row">
                         <div class="col-md-3 mb-3">
                             <label for="validationDefault02">City/Town <span class="text-danger">*</span></label>
@@ -142,7 +147,10 @@
             </div>
 
             <div class="container d-block d-md-none d-lg-none">
-                <form>
+
+                <h4 class="page-form-title">Filter by name of city, neighbourhood, type of apartment and price range:</h4>
+
+                <form class="mt-4">
                     <div class="form-row">
                         <div class="col-md-12 mb-3">
                             <label for="validationDefault02">City/Town <span class="text-danger">*</span></label>
@@ -230,66 +238,6 @@
                 </div>
             </div>
         </section>
-
-        <div class="bg-color-yellow">
-            <section class="container">
-                <div class="row">
-                    <div class="col-12 d-block d-md-none advertisement">
-                        <h5 class="find-home-header mt-40">Over 10,000 people found their dream homes with us</h5>
-                        <p class="my-3">Find your home by using our filtered search engine</p>
-                        <button class="btn btn-default find-home-button btn-ads-yellow">Find a home</button>
-                    </div>
-                    <div class="d-none d-md-block col-md-8 advertisement-md">
-                        <h5 class="find-home-header mt-40">Over 10,000 people found their dream homes with us</h5>
-                        <p class="my-3">Find your home by using our filtered search engine</p>
-                        <button class="btn btn-default find-home-button btn-ads-yellow">Find a home</button>
-                    </div>
-                    <div class="d-none d-md-block col-md-4 position-relative">
-                        <img src="./assets/pins.jpg" class="advert-images">
-                    </div>
-                </div>
-            </section>
-        </div>
-
-        <div class="bg-color-gray">
-            <section class="container">
-                <div class="row">
-                    <div class="col-12 d-block d-md-none advertisement">
-                        <h5 class="find-home-header">No need to use agents to find your dream home</h5>
-                        <p class="my-3">Just press or click on the search and You're all set</p>
-                        <button class="btn btn-default find-home-button btn-ads-gray">Find a home near you</button>
-                    </div>
-                    <div class="d-none d-md-block col-md-8 advertisement-md">
-                        <h5 class="find-home-header mt-40">No need to use agents to find your dream home</h5>
-                        <p class="my-3">Just press or click on the search and You're all set</p>
-                        <button class="btn btn-default find-home-button btn-ads-gray">Find a home near you</button>
-                    </div>
-                    <div class="d-none d-md-block col-md-4 position-relative">
-                        <img src="./assets/sell-home.jpg" class="advert-images">
-                    </div>
-                </div>
-            </section>
-        </div>
-
-        <div class="bg-color-blue">
-            <section class="container">
-                <div class="row">
-                    <div class="col-12 d-block d-md-none advertisement">
-                        <h5 class="find-home-header">Anytime, Anywhere, Any way!</h5>
-                        <p class="my-3">Very convenient platform that cut across any device including
-                            our mobile ready web app and our mobile app coming soon to your app store</p>
-                    </div>
-                    <div class="d-none d-md-block col-md-8 advertisement-md">
-                        <h5 class="find-home-header mt-40">Anytime, Anywhere, Any way!</h5>
-                        <p class="my-3">Very convenient platform that cut across any device including
-                            our mobile ready web app and our mobile app coming soon to your app store</p>
-                    </div>
-                    <div class="d-none d-md-block col-md-4 position-relative">
-                        <img src="" class="advert-images-app rounded-top rounded-bottom">
-                    </div>
-                </div>
-            </section>
-        </div>
     </main>
 
     <footer class="page-footer">
