link home page with results page

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
                     AFFORDABLE HOUSES IN GHANA</h4>
                 <h3 class="page-slogan-md text-uppercase d-none d-sm-none d-md-block">PATA SHULE... YOUR GATEWAY TO
                     AFFORDABLE HOUSES IN GHANA</h3>
+
                 <div class="form-holder d-block d-sm-none d-md-none">
-                    <button type="button" class="btn btn-default search-button-mobile text-uppercase cursor-pointer">SEARCH</button>
+                    <a href="results.html" type="button" class="btn btn-default search-button-mobile text-uppercase cursor-pointer text-decoration-none">SEARCH</a>
                     <div class="search-form">
                         <form>
                             <div class="form-group">
@@ -93,7 +94,7 @@
                                 <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
                                     aria-describedby="basic-addon2">
                                 <div class="input-group-append cursor-pointer">
-                                    <span class="input-group-text bg-color-blue " id="basic-addon2">SEARCH</span>
+                                    <a href="results.html" class="text-decoration-none"><span class="input-group-text bg-color-blue " id="basic-addon2">SEARCH</span></a>
                                 </div>
                             </div>
                         </form>
@@ -105,7 +106,7 @@
                         <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
                             aria-describedby="basic-addon2">
                         <div class="input-group-append cursor-pointer">
-                            <span class="input-group-text bg-color-yellow" id="basic-addon2 ">SEARCH</span>
+                            <a href="results.html" class="text-decoration-none"><span class="input-group-text bg-color-yellow" id="basic-addon2 ">SEARCH</span></a>
                         </div>
                     </div>
                     <div class="search-form-md">
