--- a/results.html
+++ b/results.html
@@ -177,7 +177,7 @@
                             </select>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <div class="">
+                            <div class="float-right">
                                 <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> 
                                      Search</button>
                                 <button type="submit" class="btn btn-warning"><i class="fa fa-eraser" aria-hidden="true"></i>
