--- a/detail.html
+++ b/detail.html
@@ -68,7 +68,7 @@
 
     <main>
         <section class="container">
-            <h3 class="mt-5">Details of house - DEMOTHREE</h3>
+            <h3 class="mt-5">House Details</h3>
 
             <div class="row my-3">
                 <div class="col-12 my-2">
@@ -165,6 +165,12 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="container-fluid px-0">
+            <div class="map-container mt-4">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7941.243433514354!2d-0.27925747353517527!3d5.622734183695496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf98c29a540a17%3A0x7b076d9e2a9474e6!2sSowutoum!5e0!3m2!1sen!2sgh!4v1610662840394!5m2!1sen!2sgh" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </section>
     </main>
