fixe styllint and html validator errors

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                     AFFORDABLE HOUSES IN GHANA</h3>
 
                 <div class="form-holder d-block d-sm-none d-md-none">
-                    <a href="results.html" type="button" class="btn btn-default search-button-mobile text-uppercase cursor-pointer text-decoration-none">SEARCH</a>
+                    <a href="results.html" class="btn btn-default search-button-mobile text-uppercase cursor-pointer text-decoration-none">SEARCH</a>
                     <div class="search-form">
                         <form>
                             <div class="form-group">
                                 <label for="exampleInputEmail1" class="text-uppercase">SEARCH BY KEY WORD</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
+                                    aria-describedby="exampleInputEmail1">
                             </div>
                         </form>
                     </div>
@@ -91,10 +91,9 @@
                         <form class="py-4">
                             <label for="exampleInputEmail1" class="text-uppercase">SEARCH BY KEY WORD</label>
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
-                                    aria-describedby="basic-addon2">
+                                <input type="text" class="form-control" placeholder="" aria-label="Recipient's username">
                                 <div class="input-group-append cursor-pointer">
-                                    <a href="results.html" class="text-decoration-none"><span class="input-group-text bg-color-blue " id="basic-addon2">SEARCH</span></a>
+                                    <a href="results.html" class="text-decoration-none"><span class="input-group-text bg-color-blue " id="basic-addon6">SEARCH</span></a>
                                 </div>
                             </div>
                         </form>
@@ -103,10 +102,9 @@
                 </div>
                 <div class="form-holder-md d-none d-sm-none d-md-block">
                     <div class="input-group mb-3 searchField-md">
-                        <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
-                            aria-describedby="basic-addon2">
+                        <input type="text" class="form-control" placeholder="" aria-label="Recipient's username">
                         <div class="input-group-append cursor-pointer">
-                            <a href="results.html" class="text-decoration-none"><span class="input-group-text bg-color-yellow" id="basic-addon2 ">SEARCH</span></a>
+                            <a href="results.html" class="text-decoration-none"><span class="input-group-text bg-color-yellow" id="basic-addon5">SEARCH</span></a>
                         </div>
                     </div>
                     <div class="search-form-md">
@@ -183,7 +181,7 @@
                         <button class="btn btn-default find-home-button btn-ads-yellow">Find a home</button>
                     </div>
                     <div class="d-none d-md-block col-md-4 position-relative">
-                        <img src="./assets/pins.jpg" class="advert-images">
+                        <img src="./assets/pins.jpg" class="advert-images" alt="pinsImg">
                     </div>
                 </div>
             </section>
@@ -203,7 +201,7 @@
                         <button class="btn btn-default find-home-button btn-ads-gray">Find a home near you</button>
                     </div>
                     <div class="d-none d-md-block col-md-4 position-relative">
-                        <img src="./assets/sell-home.jpg" class="advert-images">
+                        <img src="./assets/sell-home.jpg" class="advert-images" alt="sellHome">
                     </div>
                 </div>
             </section>
@@ -223,7 +221,6 @@
                             our mobile ready web app and our mobile app coming soon to your app store</p>
                     </div>
                     <div class="d-none d-md-block col-md-4 position-relative">
-                        <img src="" class="advert-images-app rounded-top rounded-bottom">
                     </div>
                 </div>
             </section>
@@ -277,10 +274,9 @@
 
                     <div class="input-group my-3 mx-auto w-75">
                         <input type="text" class="form-control border border-dark subscribe-textbox"
-                            placeholder="you@example.com" aria-label="Recipient's email"
-                            aria-describedby="button-addon2">
+                            placeholder="you@example.com" aria-label="Recipient's email">
                         <button class="btn btn-outline-secondary bg-dark px-4 text-light subscribe-btn" type="button"
-                            id="button-addon2">send</button>
+                            id="button-addon4">send</button>
                     </div>
                 </div>
 
@@ -312,10 +308,9 @@
 
                     <div class="input-group my-3 mx-auto w-75">
                         <input type="text" class="form-control border border-dark subscribe-textbox"
-                            placeholder="you@example.com" aria-label="Recipient's email"
-                            aria-describedby="button-addon2">
+                            placeholder="you@example.com" aria-label="Recipient's email">
                         <button class="btn btn-outline-secondary bg-dark px-4 text-light subscribe-btn" type="button"
-                            id="button-addon2">send</button>
+                            id="button-addon3">send</button>
                     </div>
                 </div>
 
