--- a/results.html
+++ b/results.html
@@ -72,25 +72,25 @@
                     <div class="form-row">
                         <div class="col-md-3 mb-3">
                             <label for="validationDefault02">City/Town <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <select class="form-control" name="validationDefault02" id="validationDefault02">
                                 <option>Select</option>
                             </select>
                         </div>
                         <div class="col-md-2 mb-3">
                             <label for="validationDefault01">Neighbourhood <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <select class="form-control" name="validationDefault01" id="validationDefault01">
                                 <option>Select</option>
                             </select>
                         </div>
                         <div class="col-md-2 mb-3">
                             <label for="validationDefaultUsername">Apartment Type <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <select class="form-control" name="validationDefaultUsername" id="validationDefaultUsername">
                                 <option>Select</option>
                             </select>
                         </div>
                         <div class="col-md-2 mb-3">
-                            <label for="validationDefault02">Pricing <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <label for="validationDefault03">Pricing <span class="text-danger">*</span></label>
+                            <select class="form-control" name="validationDefault03" id="validationDefault03">
                                 <option>Select</option>
                             </select>
                         </div>
@@ -113,26 +113,26 @@
                 <form class="mt-4">
                     <div class="form-row">
                         <div class="col-md-3 mb-3">
-                            <label for="validationDefault02">City/Town <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <label for="validationDefault04">City/Town <span class="text-danger">*</span></label>
+                            <select class="form-control" name="validationDefault04" id="validationDefault04">
                                 <option>Select</option>
                             </select>
                         </div>
                         <div class="col-md-2 mb-3">
-                            <label for="validationDefault01">Neighbourhood <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <label for="validationDefault05">Neighbourhood <span class="text-danger">*</span></label>
+                            <select class="form-control" name="validationDefault05" id="validationDefault05">
                                 <option>Select</option>
                             </select>
                         </div>
                         <div class="col-md-2 mb-3">
-                            <label for="validationDefaultUsername">Apartment Type <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <label for="validationDefault06">Apartment Type <span class="text-danger">*</span></label>
+                            <select class="form-control" name="validationDefault06" id="validationDefault06">
                                 <option>Select</option>
                             </select>
                         </div>
                         <div class="col-md-2 mb-3">
-                            <label for="validationDefault02">Pricing <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <label for="validationDefault07">Pricing <span class="text-danger">*</span></label>
+                            <select class="form-control" name="validationDefault07" id="validationDefault07">
                                 <option>Select</option>
                             </select>
                         </div>
@@ -153,26 +153,26 @@
                 <form class="mt-4">
                     <div class="form-row">
                         <div class="col-md-12 mb-3">
-                            <label for="validationDefault02">City/Town <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <label for="validationDefault08">City/Town <span class="text-danger">*</span></label>
+                            <select class="form-control" name="validationDefault08" id="validationDefault08">
                                 <option>Select</option>
                             </select>
                         </div>
                         <div class="col-md-12 mb-3">
-                            <label for="validationDefault01">Neighbourhood <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <label for="validationDefault09">Neighbourhood <span class="text-danger">*</span></label>
+                            <select class="form-control" name="validationDefault09" id="validationDefault09">
                                 <option>Select</option>
                             </select>
                         </div>
                         <div class="col-md-12 mb-3">
-                            <label for="validationDefaultUsername">Apartment Type <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <label for="validationDefault10">Apartment Type <span class="text-danger">*</span></label>
+                            <select class="form-control" name="validationDefault10" id="validationDefault10">
                                 <option>Select</option>
                             </select>
                         </div>
                         <div class="col-md-12 mb-3">
-                            <label for="validationDefault02">Pricing <span class="text-danger">*</span></label>
-                            <select class="form-control">
+                            <label for="validationDefault11">Pricing <span class="text-danger">*</span></label>
+                            <select class="form-control" name="validationDefault11" id="validationDefault11">
                                 <option>Select</option>
                             </select>
                         </div>
@@ -328,10 +328,9 @@
 
                     <div class="input-group my-3 mx-auto w-75">
                         <input type="text" class="form-control border border-dark subscribe-textbox"
-                            placeholder="you@example.com" aria-label="Recipient's email"
-                            aria-describedby="button-addon2">
+                            placeholder="you@example.com" aria-label="Recipient's email">
                         <button class="btn btn-outline-secondary bg-dark px-4 text-light subscribe-btn" type="button"
-                            id="button-addon2">send</button>
+                            id="button-addon10">send</button>
                     </div>
                 </div>
 
@@ -363,10 +362,9 @@
 
                     <div class="input-group my-3 mx-auto w-75">
                         <input type="text" class="form-control border border-dark subscribe-textbox"
-                            placeholder="you@example.com" aria-label="Recipient's email"
-                            aria-describedby="button-addon2">
+                            placeholder="you@example.com" aria-label="Recipient's email">
                         <button class="btn btn-outline-secondary bg-dark px-4 text-light subscribe-btn" type="button"
-                            id="button-addon2">send</button>
+                            id="button-addon9">send</button>
                     </div>
                 </div>
 
