--- a/detail.html
+++ b/detail.html
@@ -169,8 +169,9 @@
         </section>
 
         <section class="container-fluid px-0">
+            <h4 class="text-center mb-3">MAP DIRECTION</h4>
             <div class="map-container mt-4">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7941.243433514354!2d-0.27925747353517527!3d5.622734183695496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf98c29a540a17%3A0x7b076d9e2a9474e6!2sSowutoum!5e0!3m2!1sen!2sgh!4v1610662840394!5m2!1sen!2sgh" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7941.243433514354!2d-0.27925747353517527!3d5.622734183695496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf98c29a540a17%3A0x7b076d9e2a9474e6!2sSowutoum!5e0!3m2!1sen!2sgh!4v1610662840394!5m2!1sen!2sgh" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </section>
     </main>
@@ -222,10 +223,9 @@
 
                     <div class="input-group my-3 mx-auto w-75">
                         <input type="text" class="form-control border border-dark subscribe-textbox"
-                            placeholder="you@example.com" aria-label="Recipient's email"
-                            aria-describedby="button-addon2">
+                            placeholder="you@example.com" aria-label="Recipient's email">
                         <button class="btn btn-outline-secondary bg-dark px-4 text-light subscribe-btn" type="button"
-                            id="button-addon2">send</button>
+                            id="button-addon9">send</button>
                     </div>
                 </div>
 
@@ -257,10 +257,9 @@
 
                     <div class="input-group my-3 mx-auto w-75">
                         <input type="text" class="form-control border border-dark subscribe-textbox"
-                            placeholder="you@example.com" aria-label="Recipient's email"
-                            aria-describedby="button-addon2">
+                            placeholder="you@example.com" aria-label="Recipient's email">
                         <button class="btn btn-outline-secondary bg-dark px-4 text-light subscribe-btn" type="button"
-                            id="button-addon2">send</button>
+                            id="button-addon8">send</button>
                     </div>
                 </div>
 
